--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -47,3 +47,35 @@
 }
 
 /*RESPONIVE END*/
+
+/*MAIN START*/
+
+@mixin FONT() {
+    font-family: "Roboto"; 
+    font-weight: 300;
+}
+
+@mixin FLEX() {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+@mixin btn-specs() {
+    border: 2px solid #000000;
+    background-color: rgba(0,0,0,0.0);
+}
+
+@mixin background-color() {
+  background-color: #fafafa;
+}
+
+
+/*MAIN END*/
