--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -186,10 +186,10 @@ body{
 }
 
 .page-4-p {
-  color: white;
+  color: #000000;
   @include FONT;
   text-align: left;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   padding: 0.5em 0.5em 0 0.5em;
 }
 
@@ -334,6 +334,20 @@ form {
 
 .btn-page-5 {
   margin-left: 37rem;
+}
+
+.teamPic {
+  width: 100%;
+  max-width: 600px;
+  max-height: 286px;
+  margin: 2rem auto;
+  left: 50%;
+}
+
+.page-4-p {
+  text-align: center;
+  font-size: 1.5rem;
+  padding: 0 16rem 0 16rem;
 }
 
 }
