new height on team.html and maybe projects.html

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500");
-/*FOOTER START*/
-/*FOOTER END*/
-/*RESPONSIVE START*/
-/*RESPONIVE END*/
 /*MAIN START*/
 /*MAIN END*/
 section {
@@ -382,10 +378,6 @@ form {
     background-color: #fafafa;
   }
 
-  .dotdotdot {
-    margin-bottom: 50px;
-  }
-
   .page-1, .page-2, .page-3, .page-4, .page-5 {
     height: 60rem;
   }
@@ -513,6 +505,20 @@ form {
   }
 
   /*SECTION 4*/
+  .teamPic {
+    width: 100%;
+    max-width: 600px;
+    max-height: 286px;
+    margin: 2rem auto;
+    left: 50%;
+  }
+
+  .page-4-p {
+    text-align: center;
+    font-size: 1rem;
+    padding: 0 10rem 0 10rem;
+  }
+
   /*SECTION 5*/
   .page-5-title-h1 {
     margin: 2.5rem 0 0 0;
