--- a/css/project.css
+++ b/css/project.css
@@ -59,6 +59,11 @@
   width: 100%;
   padding: 0 6rem;
 }
+
+.page-3 {
+  height: 80rem;
+}
+
 }
 @media (min-width: 768px) and (max-width: 1366px){
 .page-3-flex-container{
