--- a/views/team.html
+++ b/views/team.html
@@ -53,7 +53,7 @@
 		</nav>
 		
 		<section class="team">
-			<h1 class="page-2-title-h1" >XLNT´s Team</h1> 
+			<h1 class="team-h1" >XLNT´s Team</h1> 
 			<div id="teamorange" class="orange-page-1"></div><br><br>
 			<div class="slideshow-container">
 				<div class="mySlides fade">
