--- a/css/project.css
+++ b/css/project.css
@@ -66,12 +66,27 @@
 
 }
 @media (min-width: 768px) and (max-width: 1366px){
+
+.page-3-title-h1{
+  margin-top: 7rem;
+}
+
+
 .page-3-flex-container{
   flex-direction: row;
   width: 100%;
+  margin-top: 8rem;
 }
 .page-3-flex-container2{
   flex-direction: row;
   width: 100%;
+}
+
+.page-3 {
+  height: 80rem;
+}
+
+.page-3-p {
+  margin-top: 8rem;
 }
 }
