--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500");
+/*FOOTER START*/
+/*FOOTER END*/
+/*RESPONSIVE START*/
+/*RESPONIVE END*/
 /*MAIN START*/
 /*MAIN END*/
 section {
@@ -328,6 +332,18 @@ form {
   font-family: "Roboto";
   font-weight: 300;
   margin-left: 14.2rem;
+}
+
+button, a {
+  cursor: pointer;
+}
+
+input {
+  cursor: pointer;
+}
+
+li {
+  cursor: pointer;
 }
 
 /*Desktop media query*/
